further modified index

--- a/index.html
+++ b/index.html
@@ -1,23 +1,37 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="en-us">
 
 <head>
-<title>Natasha's Bio</title>
+  <meta charset="UTF-8">
+  <title>Natasha's Bio</title>
 </head>
 
 <body>
+<div>
 
-<h1>Student Bio</h1>
-<h2>Natasha Cevallos</h2>
-<img src="#" alt="picture of myself" width="200" height="200">
-<p>
-	I was originally born in Orlando, FL, but moved to Naples, FL while I was in grade school and graduated from there. I have a Bachelor's Degree in Finance with a minor in Computer Science, which I graduated with in December 2016. Currently I am enrolled in UCF Coding Bootcamp, in hopes of being able to secure a job in the future as a web developer.
-</p>
-<h2>Contact Info</h2>
-<ul>
-<li> E-mail: <a href="nmcevall@gmail.com">nmcevall@gmail.com</a></li>
-<li> Github: <a href="https://github.com/ncevallos/Basic-Portfolio">ncevallos</a></li>
-<li> Portfolio: <a href="#">Coming Soon</a></li>
+  <header>
+    <h1>Student Bio</h1>
+  </header>
+
+  <section>
+
+    <h2>Natasha Cevallos</h2>
+    <img src="#" alt="picture of myself" width="200" height="200">
+    
+    <p>
+	I was originally born in Orlando, FL, but moved to Naples, FL while I was in grade school and graduated from there. I have a Bachelor's Degree in Finance with a minor in Computer Science, which I graduated with in December 2016. Currently I am enrolled in UCF Coding Bootcamp, in hopes of being able to secure a job in the future as a web developer.</p>
+  </section>
+
+  <section>
+    <h2>Contact Info</h2>
+
+  <ul>
+    <li><strong> E-mail: </strong><a href="nmcevall@gmail.com">nmcevall@gmail.com</a></li>
+    <li><strong> Github: </strong><a href="https://github.com/ncevallos/Basic-Portfolio">ncevallos</a></li>
+    <li><strong> Portfolio: </strong><a href="#">Coming Soon</a></li>
+  </ul>
+  </section>
+  </div>
 
 </body>
 </html>
