--- a/index.html
+++ b/index.html
@@ -4,34 +4,40 @@
 <head>
   <meta charset="UTF-8">
   <title>Natasha's Bio</title>
+  <link rel="stylesheet" type="text/css" href="assets/style.css">
 </head>
 
 <body>
-<div>
-
-  <header>
-    <h1>Student Bio</h1>
-  </header>
-
-  <section>
-
-    <h2>Natasha Cevallos</h2>
-    <img src="#" alt="picture of myself" width="200" height="200">
-    
-    <p>
-	I was originally born in Orlando, FL, but moved to Naples, FL while I was in grade school and graduated from there. I have a Bachelor's Degree in Finance with a minor in Computer Science, which I graduated with in December 2016. Currently I am enrolled in UCF Coding Bootcamp, in hopes of being able to secure a job in the future as a web developer.</p>
-  </section>
-
-  <section>
-    <h2>Contact Info</h2>
-
+  <section id="topNavigation">
+	<div id="NameHeader">
+    <h1>Natasha Cevallos</h1>
+    </div>
+  <div id="navigation">
   <ul>
-    <li><strong> E-mail: </strong><a href="nmcevall@gmail.com">nmcevall@gmail.com</a></li>
-    <li><strong> Github: </strong><a href="https://github.com/ncevallos/Basic-Portfolio">ncevallos</a></li>
-    <li><strong> Portfolio: </strong><a href="#">Coming Soon</a></li>
+  <li><a href="index.html">About</a></li>
+  <li><a href="portfolio.html">Portfolio</a></li>
+  <li><a href="contact.html">Contact</a></li>
   </ul>
-  </section>
   </div>
+  </section>
+  
+<section id="mainContainer">  
+    <div id="mainContent">
+    <div class="headings2">
+    <h1>About Me</h1>
+    </div>
+    <p>
+	<img src="" width="200" height="200" id="imageFloat"> I was originally born in Orlando, FL, but moved to Naples, FL while I was in grade school and graduated from there. I have a Bachelor's Degree in Finance with a minor in Computer Science, which I graduated with in December 2016. Currently I am enrolled in UCF Coding Bootcamp, in hopes of being able to secure a job in the future as a web developer.</p></div>
+    <div id="connectWith">
+    <h1 class="headings2">Connect With Me</h1>
+    <img src="images/linkedin.png" class="connectImages">
+    <img src="images/github.png" class="connectImages">
+    <img src="images/overflow.png" class="connectImages">
+    </div>
 
+  </section>
+<footer class="footer">
+  @ Copyright 2017 Natasha Cevallos
+</footer>
 </body>
 </html>
