--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,9 @@
   <div id="navigation">
   <ul>
   <li><a href="index.html">About</a></li>
+  <li>|</li>
   <li><a href="portfolio.html">Portfolio</a></li>
+  <li>|</li>
   <li><a href="contact.html">Contact</a></li>
   </ul>
   </div>
@@ -26,6 +28,7 @@
     <div class="headings2">
     <h1>Portfolio</h1>
     </div>
+    <hr>
     <p>
 
 
@@ -55,10 +58,14 @@
   </div>
 
     <div id="connectWith">
+    <div id="imageContainer">
     <h1 class="headings2">Connect With Me</h1>
+    <hr>
+    <br>
     <img src="images/linkedin.png" class="connectImages">
     <img src="images/github.png" class="connectImages">
     <img src="images/overflow.png" class="connectImages">
+    </div>
     </div>
 
   </div>
