--- a/contact.html
+++ b/contact.html
@@ -14,11 +14,11 @@
     </div>
   <div id="navigation">
   <ul>
-  <li><a href="index.html">About</a></li>
+  <li><a href="index.html" class="topLinks">About</a></li>
   <li>|</li>
-  <li><a href="portfolio.html">Portfolio</a></li>
+  <li><a href="portfolio.html" class="topLinks">Portfolio</a></li>
   <li>|</li>
-  <li><a href="contact.html">Contact</a></li>
+  <li><a href="contact.html" class="topLinks">Contact</a></li>
   </ul>
   </div>
   </section>
@@ -38,10 +38,10 @@
   <input type="text" name="email"><br>
   Message<br>
   <input type="text" name="message" id="message" size="300"><br>
-  <input type="submit" value="Send" maxlength="300">
+  <input type="submit" value="Send">
 </form>
  
-  </p>
+
   </div>
 
     <div id="connectWith">
@@ -49,9 +49,9 @@
     <h1 class="headings2">Connect With Me</h1>
     <hr>
     <br>
-    <img src="images/linkedin.png" class="connectImages">
-    <img src="images/github.png" class="connectImages">
-    <img src="images/overflow.png" class="connectImages">
+    <a href="#"><img src="images/linkedin.png" class="connectImages" alt="linkedinlogo"></a>
+    <a href="#"><img src="images/github.png" class="connectImages" alt="github logo"></a>
+    <a href="#"><img src="images/overflow.png" class="connectImages" alt="stack overflow logo"></a>
     </div>
     </div>
 
