--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     </div>
   <div id="navigation">
   <ul>
-  <li><a href="index.html">About</a></li>
+  <li><a href="index.html" class="topLinks">About</a></li>
   <li>|</li>
-  <li><a href="portfolio.html">Portfolio</a></li>
+  <li><a href="portfolio.html" class="topLinks">Portfolio</a></li>
   <li>|</li>
-  <li><a href="contact.html">Contact</a></li>
+  <li><a href="contact.html" class="topLinks">Contact</a></li>
   </ul>
   </div>
   </section>
@@ -30,15 +30,20 @@
     </div>
     <hr>
     <p>
-	<img src="" width="200" height="200" id="imageFloat"> I was originally born in Orlando, FL, but moved to Naples, FL while I was in grade school and graduated from there. I have a Bachelor's Degree in Finance with a minor in Computer Science, which I graduated with in December 2016. Currently I am enrolled in UCF Coding Bootcamp, in hopes of being able to secure a job in the future as a web developer.</p></div>
+	<img src="images/natasha.jpg" width="200" height="250" id="imageFloat" alt="image of Natasha"> Originally born from Orlando, FL, I graduated from high school in Naples, FL and received my Bachelor’s degree from Florida Gulf Coast University in Fort Myers, FL. I am currently enrolled in University of Central Florida’s Coding Bootcamp in Fort Lauderdale. My aspiration is to do someday do something where I make an impact in our world. Whether that impact comes about through creating a new App or website that changes or improves the way something is already done, or being lucky enough to come up with a new exciting idea that innovates something altogether.</p>
+<p>My work history highlights, include previously working for the Apple Store, being a dispatch supervisor for UPS, and managing a high-volume restaurant in Naples. While working for the Apple Store, my job description was an Inventory Specialist. During my time there, I contributed to our team being ranked as one of the top 5 stores in the world, for our inventory accuracy.</p>
+  <p>Before working for Apple, I worked for UPS in Naples, FL for 3 years. I started as a pre-loader loading trucks, and later when a position became available I was promoted to Assistant Dispatch Supervisor in the Fort Myers, FL building. This was fun an exciting promotion as not only did I have a new title, but I was also able to be a part of the implementation team, that took the UPS Fort Myers building from an analog loading and dispatch system, to a completely digital version. My experience during that time taught me a lot about how computer systems and programs work, and the limitations that one can encounter in the real world, when it comes to digitizing an analog system.</p>
+  <p>My most recent job experience was working as a part-time Sous Chef/Culinary Professional at Seasons 52, while completing my Bachelor’s at FGCU. While many people seem to look down at this job, since so many people view service industry jobs as jobs anyone can fill, I think it was a very valuable experience in crafting who I am today. I learned a lot about managing and dealing with people, and different personality traits, and from those people being able to craft a team that can flawless execute busy season. I also learned a lot about time management, from the daily management of dealing with different delivery vendors in and out, as well still managing staff and prep and par levels. In addition, I also further honed in my skills as a planner, as we would sometimes feed well over a thousand guests on holidays.</p>
+  <p>My true interest at heart though, is in tech. Where I hope to gain, and use my abilities to create something that lasts more than the 10-20 minutes it takes someone to eat a meal. Growing up I always had an interest in technology, and web design, which is why I am currently enrolled in the Coding Boot Camp, and seeking out opportunities in a new and exciting field.
+</p></div>
     <div id="connectWith">
     <div id="imageContainer">
     <h1 class="headings2">Connect With Me</h1>
     <hr>
     <br>
-    <img src="images/linkedin.png" class="connectImages">
-    <img src="images/github.png" class="connectImages">
-    <img src="images/overflow.png" class="connectImages">
+    <a href="#"><img src="images/linkedin.png" class="connectImages" alt="linkedinlogo"></a>
+    <a href="#"><img src="images/github.png" class="connectImages" alt="github logo"></a>
+    <a href="#"><img src="images/overflow.png" class="connectImages" alt="stack overflow logo"></a>
     </div>
     </div>
 
