--- a/portfolio.html
+++ b/portfolio.html
@@ -14,11 +14,11 @@
     </div>
   <div id="navigation">
   <ul>
-  <li><a href="index.html">About</a></li>
+  <li><a href="index.html" class="topLinks">About</a></li>
   <li>|</li>
-  <li><a href="portfolio.html">Portfolio</a></li>
+  <li><a href="portfolio.html" class="topLinks">Portfolio</a></li>
   <li>|</li>
-  <li><a href="contact.html">Contact</a></li>
+  <li><a href="contact.html" class="topLinks">Contact</a></li>
   </ul>
   </div>
   </section>
@@ -34,27 +34,26 @@
 
 
   <div class="image-wrapper">
-       <img src="images/hangman.jpeg" width="275px" height="275px" alt="sometext" />
+       <img src="images/hangman.jpeg" width="275" height="275" alt="image for hangman" />
        <p>Hangman</p>
        </div>
     <div class="image-wrapper">
-       <img src="images/rpggame.jpeg" width="275px" height="275px" alt="sometext" />
+       <img src="images/rpggame.jpeg" width="275" height="275" alt="image for rpg game" />
        <p>RPG Game</p>
        </div>
     <div class="image-wrapper">
-       <img src="images/triviagame.jpeg" width="275px" height="275px" alt="sometext" />
+       <img src="images/triviagame.jpeg" width="275" height="275" alt="image for triviagame" />
        <p>Trivia Game</p>
        </div>
     <div class="image-wrapper">
-       <img src="images/rutgers.jpeg" width="275px" height="275px" ="sometext" />
+       <img src="images/rutgers.jpeg" width="275" height="275" alt="image for rutgers" />
        <p>Rutgers Info Widget</p>
        </div>
     <div class="image-wrapper">
-       <img src="images/rockpaperscissors.jpeg" width="275px" height="275px" alt="sometext" />
+       <img src="images/rockpaperscissors.jpeg" width="275" height="275" alt="image for rockpaperscissors" />
        <p>Rock Paper Scissors</p>
        </div>
  
-  </p>
   </div>
 
     <div id="connectWith">
@@ -62,9 +61,9 @@
     <h1 class="headings2">Connect With Me</h1>
     <hr>
     <br>
-    <img src="images/linkedin.png" class="connectImages">
-    <img src="images/github.png" class="connectImages">
-    <img src="images/overflow.png" class="connectImages">
+    <a href="#"><img src="images/linkedin.png" class="connectImages" alt="linkedinlogo"></a>
+    <a href="#"><img src="images/github.png" class="connectImages" alt="github logo"></a>
+    <a href="#"><img src="images/overflow.png" class="connectImages" alt="stack overflow logo"></a>
     </div>
     </div>
 
